# databricks-logs-reader

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/skills/dbr-logs/: SKILL.md
.claude-plugin/skills/dbr-logs/references/: log-structure.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
skills/dbr-logs/: SKILL.md
spec/: 01-cli-tool.md  02-claude-skill.md  03-tui-mode.md
src/dbr_logs/: cli.py  config.py  databricks_client.py  discovery.py  fetcher.py  filters.py  formatter.py  merger.py  models.py  noise.py  parser.py  resolver.py
tests/: conftest.py  test_cli.py  test_discovery.py  test_fetcher.py  test_filters.py  test_formatter.py  test_merger.py  test_noise.py  test_parser.py  test_resolver.py
