[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbr-logs"
version = "0.1.0"
description = "Fetch and display Databricks job logs from Unity Catalog Volumes"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "alonisser", email = "alonisser@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click>=8.1",
    "databricks-sdk>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/zencity/databricks-logs-reader"
Repository = "https://github.com/zencity/databricks-logs-reader"
Issues = "https://github.com/zencity/databricks-logs-reader/issues"

[project.scripts]
dbr-logs = "dbr_logs.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dbr_logs"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "dbr_logs.databricks_client"
ignore_errors = true

[[tool.mypy.overrides]]
module = "databricks.*"
ignore_missing_imports = true
